--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hola coursera!</title>
 </head>
 <body>
-<h1>Hola coursera! es un gran curso</h1>
+<h1>Hola coursera! Nueva prueba  de pagina</h1>
 </body>
 </html>
